--- a/public/EmailSetting.html
+++ b/public/EmailSetting.html
@@ -91,12 +91,12 @@
 
 		<div class="layui-form" action="" lay-filter="EmailSetting">
 		
-			<div class="layui-form-item">
+			<!-- <div class="layui-form-item">
 			    <label class="layui-form-label">发件人</label>
 			    <div class="layui-input-block">
 			      <input type="text" name="Sender" autocomplete="off" placeholder="发件人" class="layui-input maxwidth" value="">
 			    </div>
-			</div>
+			</div> -->
 			
 			<div class="layui-form-item">
 			    <label class="layui-form-label">发件箱账号</label>
@@ -108,7 +108,7 @@
 			<div class="layui-form-item">
 			    <label class="layui-form-label">发件箱密码</label>
 			    <div class="layui-input-block">
-			      <input type="text" name="SenderEmailPassword" autocomplete="off" placeholder="发件箱密码" class="layui-input maxwidth" value="">
+			      <input type="password" name="SenderEmailPassword" autocomplete="off" placeholder="发件箱密码" class="layui-input maxwidth" value="">
 			    </div>
 			</div>
 			
@@ -126,13 +126,13 @@
 			    </div>
 			</div>
 			
-			<div class="layui-form-item">
+			<!-- <div class="layui-form-item">
 			    <label class="layui-form-label">发送方式</label>
 			    <div class="layui-input-block">
 			      	<input type="radio" name="SendMode" value="ssl" title="SSL服务方式"></br>
 	     			<input type="radio" name="SendMode" value="tls" checked="" title="TLS服务方式">
 			    </div>
-			</div>
+			</div> -->
 
 			<div class="layui-form-item">
 			    <label class="layui-form-label">测试</label>
